[gd_scene load_steps=9 format=3 uid="uid://6i48nt0aqef8"]

[ext_resource type="Script" path="res://abilities/attack/proximity_mine/mine.gd" id="1_bumr1"]
[ext_resource type="Script" path="res://classes/Interpolator.gd" id="2_m4ngs"]
[ext_resource type="Script" path="res://classes/ReversibleTimer.gd" id="3_voao1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_g2vna"]
radius = 9.0

[sub_resource type="CircleShape2D" id="CircleShape2D_uxae1"]
radius = 128.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_b2udl"]
blend_mode = 1

[sub_resource type="Gradient" id="Gradient_a8epy"]
offsets = PackedFloat32Array(0, 0.0970464, 0.202532, 0.324895, 0.413502, 0.56962, 0.744726, 0.862869, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0.751079, 1, 1, 1, 0.626618, 1, 1, 1, 0.460671, 1, 1, 1, 0.327956, 1, 1, 1, 0.214691, 1, 1, 1, 0.0949367, 1, 1, 1, 0.0282456, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_bxfru"]
gradient = SubResource("Gradient_a8epy")
width = 32
height = 32
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)

[node name="Mine" type="RigidBody2D"]
position = Vector2(280, 168)
collision_layer = 16
script = ExtResource("1_bumr1")
explosion_radius = 512.0
off_color = Color(0.188235, 0.133333, 0, 1)
arming_color = Color(0.694118, 0.67451, 0, 1)
armed_color = Color(0, 0.764706, 0, 1)
detonate_color = Color(1, 0, 0, 1)
explosion_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_g2vna")

[node name="Detector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
visible = false
shape = SubResource("CircleShape2D_uxae1")

[node name="Interpolator" type="Node2D" parent="."]
script = ExtResource("2_m4ngs")

[node name="Hull" type="Polygon2D" parent="Interpolator"]
color = Color(0.215686, 0.215686, 0.215686, 1)
polygon = PackedVector2Array(-2, -10, -2, -6, 2, -6, 2, -10, 10, -2, 6, -2, 6, 2, 10, 2, 2, 10, 2, 6, -2, 6, -2, 10, -10, 2, -6, 2, -6, -2, -10, -2)

[node name="Indicator" type="Polygon2D" parent="Interpolator"]
modulate = Color(1, 0, 0, 1)
polygon = PackedVector2Array(-2, -2, 2, -2, 2, 2, -2, 2)

[node name="Sprite2D" type="Sprite2D" parent="Interpolator/Indicator"]
material = SubResource("CanvasItemMaterial_b2udl")
texture = SubResource("GradientTexture2D_bxfru")

[node name="LifetimeTimer" type="Node" parent="."]
script = ExtResource("3_voao1")

[node name="ArmingTimer" type="Node" parent="."]
script = ExtResource("3_voao1")

[connection signal="body_entered" from="Detector" to="." method="_on_detector_body_entered"]
[connection signal="body_exited" from="Detector" to="." method="_on_detector_body_exited"]
